# pathpiece

./: .gitignore  AUTHORS.md  LICENSE  PathPieceUsage.ipynb  README.md  main.py  requirements.txt  run.sh
pathpiece/: .gitignore  Cargo.toml  README.md  build.sh  pyproject.toml  requirements.txt  test.sh
pathpiece/data/: corpus_tiny.csv  vdump_114688.vocab  vdump_131072.vocab  vdump_16384.vocab  vdump_163840.vocab  vdump_196608.vocab  vdump_229376.vocab  vdump_24576.vocab  vdump_262144.vocab  vdump_32768.vocab  vdump_40960.vocab  vdump_49152.vocab  vdump_57344.vocab  vdump_65536.vocab  vdump_81920.vocab  vdump_98304.vocab
pathpiece/src/: configuration.rs  lib.rs  main.rs  tests.rs
