[package]
name = "pathpiece"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pathpiece"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
csv = "1.2.2"
hex = "0.4.3"
num-format = "0.4.4"
num_cpus = "1.16.0"
pyo3 = {version="0.19.2", features = ["extension-module"]}
rand = "0.8.5"
rayon = "1.7.0"
serde_json = "1.0.104"

[profile.release]
lto = "fat"
codegen-units = 1

[[bin]]
name = "pathpiece"
path = "src/main.rs"
